--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.787.0",
+    "@aws-sdk/client-sts": "^3.787.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "@google/genai": "^0.8.0",
@@ -32,7 +34,6 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
     "@types/fluent-ffmpeg": "^2.1.27",
-    "aws-sdk": "^2.1692.0",
     "axios": "^1.8.4",
     "bullmq": "^5.48.1",
     "cloudinary": "^2.6.0",
