--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/swagger": "^11.1.5",
     "@types/fluent-ffmpeg": "^2.1.27",
     "axios": "^1.8.4",
     "bullmq": "^5.48.1",
