--- a/package.json
+++ b/package.json
@@ -30,17 +30,23 @@
     "@nestjs/common": "^11.0.12",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.1.5",
     "@types/fluent-ffmpeg": "^2.1.27",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
     "bullmq": "^5.48.1",
     "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
     "fluent-ffmpeg": "^2.1.3",
     "hbs": "^4.2.0",
     "mongodb": "^6.15.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
