--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mongodb": "^6.15.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "puppeteer": "^24.11.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
