--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.1.5",
-    "@types/fluent-ffmpeg": "^2.1.27",
+    "@playwright/test": "^1.53.2",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.48.1",
@@ -47,7 +47,9 @@
     "mongodb": "^6.15.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "puppeteer": "^24.11.2",
+    "playwright": "^1.53.2",
+    "puppeteer": "^19.0.0",
+    "puppeteer-screen-recorder": "^3.0.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.1"
@@ -61,6 +63,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jest": "^29.5.14",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
